apps/base/sample-view/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-view
  labels:
    app: sample-view
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  selector:
    deployment: sample-view
